# person-recognition-opencv-rust

./: .env  .env.sample  Cargo.toml  README.md  crontab
person-recognition/: .env.sample  Cargo.toml  README.md
person-recognition/script/: restart.sh  stop.sh
person-recognition/src/: main.rs
script/: release-person-recognition.sh  release-slack-notification.sh  release.sh
slack-notification/: .env.sample  README.md  pyproject.toml  send.py
src/: main.rs
