[package]
name = "person-recognition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
chrono = "0.4.19"
dotenv = "0.15.0"
opencv = "0.66.0"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
